// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Action Bar Action Bar Item 1`] = `
<sv-action-bar-item
  params="item: item"
/>
`;

exports[`Storyshots Action Bar Action Bar Item Without Title 1`] = `
<sv-action-bar-item
  params="item: item"
/>
`;

exports[`Storyshots Action Bar Active Action Bar Item 1`] = `
<sv-action-bar-item
  params="item: item"
/>
`;

exports[`Storyshots Action Bar Desktop 1`] = `
<sv-action-bar
  params="items: items"
/>
`;

exports[`Storyshots Action Bar Disabled Action Bar Item 1`] = `
<sv-action-bar-item
  params="item: item"
/>
`;

exports[`Storyshots Button Action Button 1`] = `
<svc-button
  params="action: action, title: title, css: css"
>
  <button
    class="svc-button svc-button--action"
    data-bind="click: action, css: css, disable: disabled"
  >
    
  
    <span
      class="svc-button__text"
      data-bind="text: title"
    >
      Add a Question
    </span>
    

  </button>
  

</svc-button>
`;

exports[`Storyshots Button Disabled 1`] = `
<svc-button
  params="action: action, title: title, disabled: disabled"
>
  <button
    class="svc-button"
    data-bind="click: action, css: css, disable: disabled"
    disabled=""
  >
    
  
    <span
      class="svc-button__text"
      data-bind="text: title"
    >
      Button
    </span>
    

  </button>
  

</svc-button>
`;

exports[`Storyshots Button Disabled Action Button 1`] = `
<svc-button
  params="action: action, title: title, disabled: disabled, css: css"
>
  <button
    class="svc-button svc-button--action"
    data-bind="click: action, css: css, disable: disabled"
    disabled=""
  >
    
  
    <span
      class="svc-button__text"
      data-bind="text: title"
    >
      Add a Question
    </span>
    

  </button>
  

</svc-button>
`;

exports[`Storyshots Button Group Disabled Item 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Group Four Buttons 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Group Selected Item 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Group Three Buttons 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Group Two Buttons 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Group With Icons 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Group With Icons Disabled Item 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Group With Icons Selected Item 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Group With Label 1`] = `
<div
  style="width:480px"
>
  <svc-button-group
    params="model: model"
  />
</div>
`;

exports[`Storyshots Button Ordinary 1`] = `
<svc-button
  params="action: action, title: title"
>
  <button
    class="svc-button"
    data-bind="click: action, css: css, disable: disabled"
  >
    
  
    <span
      class="svc-button__text"
      data-bind="text: title"
    >
      Button
    </span>
    

  </button>
  

</svc-button>
`;

exports[`Storyshots Creator / Desktop or Landscape Tablet Default 1`] = `
<survey-creator
  params="creator: creator"
>
  <div
    class="svc-creator__area svc-flex-column"
  >
    
  
    <div
      class="svc-top-bar"
    >
      
    
      <!-- ko component: { name: 'svc-tabbed-menu', params: { items: creator.tabs } } -->
      <div
        class="svc-tabbed-menu"
      >
        
  
        <!-- ko foreach: items -->
        
  
        <span
          class="svc-tabbed-menu-item-container"
          data-bind="css: $data.css, style: { visibility : $data.isVisible? 'visible': 'hidden' }, visible: $data.visible === undefined || $data.visible"
        >
          
    
          <!-- ko component: { name: $data.component || 'svc-tabbed-menu-item', params: { item: $data } } -->
          
    
          <!-- /ko -->
          
  
        </span>
        
  
        <!-- /ko -->
        

      </div>
      

      <!-- /ko -->
      
    
      <!-- ko component: { name: 'sv-action-bar', params: { items: creator.toolbarItems } } -->
      <!-- /ko -->
      
  
    </div>
    
  
    <div
      class="svc-creator__content-wrapper svc-flex-row"
    >
      
    
      <div
        class="svc-creator__content-holder svc-flex-column"
      >
        
      
        <!-- ko foreach: creator.tabs -->
        
      
        <div
          class="svc-creator-tab"
          data-bind="visible: $parent.creator.viewType == id"
        >
          
        
          <!-- ko component: { name: componentContent, params: { creator: $parent.creator, data: data } } -->
          <svc-toolbox
            params="categories: creator.toolboxCategories, creator: creator"
          >
            <div
              class="svc-toolbox"
            >
              
  
              <div
                class="svc-toolbox__category"
              >
                
    
                <!-- ko foreach: items -->
                
    
                <div
                  class="svc-toolbox__tool"
                  data-bind="css: $data.css, visible: $data.visible === undefined || $data.visible, style: { visibility : $data.isVisible ? 'visible': 'hidden' }"
                >
                  
      
                  <!-- ko if: $data.needSeparator -->
                  
      
                  <div
                    class="svc-toolbox__category-separator"
                  />
                  
      
                  <!-- /ko -->
                  
      
                  <!-- ko component: { name: $data.component || 'svc-toolbox-item', params: { item: $data, creator: $parents[1].creator } } -->
                  
      
                  <!-- /ko -->
                  
    
                </div>
                
    
                <!-- /ko -->
                
  
              </div>
              

            </div>
            

          </svc-toolbox>
          

          <div
            class="svc-tab-designer sv-root-modern"
            data-bind="css: survey.css.root"
          >
            
  
            <div
              class="sv-container-modern"
              data-bind="css: survey.css.container"
            >
              
    
              <!-- ko component: { name: 'sv-template-renderer', params: { componentData: null, templateData: { name: 'survey-header', data: survey } } } -->
              <!-- /ko -->
              
    
              <!-- ko if: survey.isShowProgressBarOnTop -->
              <!-- /ko -->
              
    
              <!-- ko foreach: survey.pages -->
              
    
              <svc-page
                data-bind="attr: { 'data-svc-drop-target-element-name': $data.name }"
                data-svc-drop-target-element-name="page1"
                params="survey: $parent.survey, page: $data, creator: $parent.creator"
              >
                <div
                  class="svc-page__content"
                  data-bind="click: select, clickBubble: false, css: css, event: { mouseover: function(m, e) { hover(e, $element); }, mouseleave: function(m, e) { hover(e, $element); } }"
                >
                  
  
                  <!-- ko template: { name: 'survey-page', data: page } -->
                  <!-- /ko -->
                  
  
                  <div
                    class="svc-page__add-new-question"
                    data-bind="click: addNewQuestion, clickBubble: false"
                  >
                    
    
                    <span
                      class="svc-text svc-text--normal svc-text--bold"
                      data-bind="text: addNewQuestionText"
                    >
                      
    
                    </span>
                    
  
                  </div>
                  
  
                  <div
                    class="svc-page__content-actions"
                  >
                    
    
                    <!-- ko component: { name: 'sv-action-bar', params: { items: actions } } -->
                    
    
                    <!-- /ko -->
                    
  
                  </div>
                  

                </div>
                

              </svc-page>
              
    
              <!-- /ko -->
              
    
              <!-- ko if: showNewPage -->
              <!-- /ko -->
              
    
              <!-- ko if: survey.isShowProgressBarOnBottom -->
              <!-- /ko -->
              
  
            </div>
            

          </div>
          

          <svc-page-navigator
            params="creator: creator"
          >
            <!-- ko if: visible -->
            <!-- /ko -->
            

          </svc-page-navigator>
          

          <div
            class="svc-flex-column"
            style="width: auto; border-left: 1px solid lightgray;"
          >
            
  
            <svc-property-panel
              params="model: creator"
            >
              <!-- ko component: { name: 'sv-action-bar', params: { items: toolbarItems } } -->
              <!-- /ko -->
              

              <div
                class="svc-property-panel__header"
                data-bind="text: title"
              >
                Survey
              </div>
              

              <div
                class="svc-property-panel__expander"
              >
                
  
                <!-- ko template: { name: 'survey-content', data: survey  } -->
                <!-- /ko -->
                

              </div>
              

            </svc-property-panel>
            

          </div>
          

          <script
            id="svc-choice-item-text"
            type="text/html"
          >
            
  &lt;!-- ko template: { name: 'survey-string', data: locText } --&gt;
  &lt;!-- /ko --&gt;

          </script>
          

          <!-- /ko -->
          
      
        </div>
        
      
        
      
        <div
          class="svc-creator-tab"
          data-bind="visible: $parent.creator.viewType == id"
          style="display: none;"
        >
          
        
          <!-- ko component: { name: componentContent, params: { creator: $parent.creator, data: data } } -->
          <div
            class="svc-creator-tab__content"
          >
            
  
            <div
              class="svc-plugin-tab__content svc-test-tab__content"
            >
              
    
              <survey-simulator
                params="options: simulator"
              >
                <div
                  class="svd-simulator-main"
                >
                  
  
                  <!-- ko if: hasFrame -->
                  <!-- /ko -->
                  
  
                  <!-- ko ifnot: hasFrame -->
                  
  
                  <survey-widget
                    class="svd-simulator-content"
                    params="survey: survey"
                  >
                    <!-- ko if: $data.survey -->
                    <!-- /ko -->
                  </survey-widget>
                  
  
                  <!-- /ko -->
                  

                </div>
                

              </survey-simulator>
              
    
              <!-- ko ifnot: isRunning -->
              <!-- /ko -->
              
  
            </div>
            
  
            <div
              class="svc-plugin-tab__content-actions svc-test-tab__content-actions"
            >
              
    
              <!-- ko component: { name: 'sv-action-bar', params: { items: actions } } -->
              <!-- /ko -->
              
  
            </div>
            

          </div>
          

          <!-- /ko -->
          
      
        </div>
        
      
        
      
        <div
          class="svc-creator-tab"
          data-bind="visible: $parent.creator.viewType == id"
          style="display: none;"
        >
          
        
          <!-- ko component: { name: componentContent, params: { creator: $parent.creator, data: data } } -->
          <div
            class="svc-creator-tab__content"
          >
            
  
            <div
              class="svc-json-editor-tab__content"
            >
              
    
              <textarea
                aria-label="JSON Editor"
                class="svc-json-editor-tab__content-area"
                data-bind="textInput: text, disable: readOnly, attr: { 'aria-label': ariaLabel }"
              >
                    
              </textarea>
              
    
              <div
                class="svc-json-editor-tab__content-errors"
                data-bind="foreach: errors"
              />
              
  
            </div>
            

          </div>
          <!-- /ko -->
          
      
        </div>
        
      
        
      
        <div
          class="svc-creator-tab"
          data-bind="visible: $parent.creator.viewType == id"
          style="display: none;"
        >
          
        
          <!-- ko component: { name: componentContent, params: { creator: $parent.creator, data: data } } -->
          <div
            class="svc-creator-tab__content"
          >
            
  
            <survey-widget
              params="survey: survey"
            >
              <!-- ko if: $data.survey -->
              <!-- /ko -->
            </survey-widget>
            

          </div>
          <!-- /ko -->
          
      
        </div>
        
      
        <!-- /ko -->
        
    
      </div>
      
  
    </div>
    

  </div>
  

</survey-creator>
`;

exports[`Storyshots Creator design surface content Default 1`] = `
<svc-tab-designer
  params="creator: creator"
>
  <svc-toolbox
    params="categories: creator.toolboxCategories, creator: creator"
  />
  

  <div
    class="svc-tab-designer"
    data-bind="css: survey.css.root"
  >
    
  
    <div
      data-bind="css: survey.css.container"
    >
      
    
      <!-- ko component: { name: 'sv-template-renderer', params: { componentData: null, templateData: { name: 'survey-header', data: survey } } } -->
      
    
      <!-- /ko -->
      
    
      <!-- ko if: survey.isShowProgressBarOnTop -->
      
    
      <!-- ko component: { name: 'sv-progress-' + survey.progressBarType, params: { model: survey } } -->
      <!-- /ko -->
      
    
      <!-- /ko -->
      
    
      <!-- ko foreach: survey.pages -->
      
    
      <svc-page
        data-bind="attr: { 'data-svc-drop-target-element-name': $data.name }"
        params="survey: $parent.survey, page: $data, creator: $parent.creator"
      />
      
    
      <!-- /ko -->
      
    
      <!-- ko if: showNewPage -->
      
    
      <svc-page
        data-bind="attr: { 'data-svc-drop-target-element-name': 'newGhostPage' }"
        params="survey: survey, creator: creator, page: newPage"
      />
      
    
      <!-- /ko -->
      
    
      <!-- ko if: survey.isShowProgressBarOnBottom -->
      
    
      <!-- ko component: { name: 'sv-progress-' + survey.progressBarType, params: { model: survey } } -->
      <!-- /ko -->
      
    
      <!-- /ko -->
      
  
    </div>
    

  </div>
  

  <svc-page-navigator
    params="creator: creator"
  />
  

  <div
    class="svc-flex-column"
    style="width: auto; border-left: 1px solid lightgray;"
  >
    
  
    <svc-property-panel
      params="model: creator"
    />
    

  </div>
  

  <script
    id="svc-choice-item-text"
    type="text/html"
  >
    
  &lt;!-- ko template: { name: 'survey-string', data: locText } --&gt;
  &lt;!-- /ko --&gt;

  </script>
  

</svc-tab-designer>
`;

exports[`Storyshots List Ordinary 1`] = `
<div
  data-bind="component: { name: 'sv-list', params: $data}"
  style="width: 250px"
/>
`;

exports[`Storyshots List With Disabled Item 1`] = `
<div
  data-bind="component: { name: 'sv-list', params: $data}"
  style="width: 250px"
/>
`;

exports[`Storyshots List With Icons 1`] = `
<div
  data-bind="component: { name: 'sv-list', params: $data}"
  style="width: 250px"
/>
`;

exports[`Storyshots List With Selection 1`] = `
<div
  data-bind="component: { name: 'sv-list', params: $data}"
  style="width: 250px"
/>
`;

exports[`Storyshots Page Navigator Page Navigator 1`] = `
<div
  style="width: 200px; display: flex; flex-direction: row-reverse;"
>
  <svc-page-navigator
    params="items: items"
  >
    <!-- ko if: visible -->
    

    <div
      class="svc-page-navigator__selector"
      data-bind="click: togglePageSelector, attr: { title: 'text' }"
    >
      
    
      <sv-svg-icon
        class="svc-page-navigator__navigator-icon"
        params="iconName: icon, size: 22"
      />
      
    
      <sv-popup
        params="model: popupModel, cssClass: 'svc-page-navigator__popup'"
      />
      

    </div>
    

    <!-- ko foreach: items -->
    

    <svc-page-navigator-item
      params="item: $data"
    />
    

    <!-- /ko -->
    

    <!-- /ko -->
    

  </svc-page-navigator>
</div>
`;

exports[`Storyshots Page Navigator Page Navigator Item 1`] = `
<div
  style="width: 200px; display: flex; flex-direction: row-reverse;"
>
  <svc-page-navigator-item
    params="item: item"
  >
    <div
      class="svc-page-navigator-item-content"
      data-bind="click: action, css: { 'svc-page-navigator-item--selected': active, 'svc-page-navigator-item--disabled': disabled }, attr: { title: text }"
      title="Page 1"
    >
      
  
      <div
        class="svc-page-navigator-item__dot"
      />
      

  
      <div
        class="svc-page-navigator-item__banner"
      >
        
    
        <span
          class="svc-text svc-text--normal"
          data-bind="text: text"
        >
          Page 1
        </span>
        
    
        <span
          class="svc-page-navigator-item__dot"
        />
        
  
      </div>
      

    </div>
    

  </svc-page-navigator-item>
</div>
`;

exports[`Storyshots Page Navigator Page Navigator Item Disabled 1`] = `
<div
  style="width: 200px; display: flex; flex-direction: row-reverse;"
>
  <svc-page-navigator-item
    params="item: item"
  >
    <div
      class="svc-page-navigator-item-content"
      data-bind="click: action, css: { 'svc-page-navigator-item--selected': active, 'svc-page-navigator-item--disabled': disabled }, attr: { title: text }"
      title="Disabled Page"
    >
      
  
      <div
        class="svc-page-navigator-item__dot"
      />
      

  
      <div
        class="svc-page-navigator-item__banner"
      >
        
    
        <span
          class="svc-text svc-text--normal"
          data-bind="text: text"
        >
          Disabled Page
        </span>
        
    
        <span
          class="svc-page-navigator-item__dot"
        />
        
  
      </div>
      

    </div>
    

  </svc-page-navigator-item>
</div>
`;

exports[`Storyshots Page Navigator Page Navigator Item Selected 1`] = `
<div
  style="width: 200px; display: flex; flex-direction: row-reverse;"
>
  <svc-page-navigator-item
    params="item: item"
  >
    <div
      class="svc-page-navigator-item-content svc-page-navigator-item--selected"
      data-bind="click: action, css: { 'svc-page-navigator-item--selected': active, 'svc-page-navigator-item--disabled': disabled }, attr: { title: text }"
      title="Page 1"
    >
      
  
      <div
        class="svc-page-navigator-item__dot"
      />
      

  
      <div
        class="svc-page-navigator-item__banner"
      >
        
    
        <span
          class="svc-text svc-text--normal"
          data-bind="text: text"
        >
          Page 1
        </span>
        
    
        <span
          class="svc-page-navigator-item__dot"
        />
        
  
      </div>
      

    </div>
    

  </svc-page-navigator-item>
</div>
`;

exports[`Storyshots Popup Modal Context Menu Ordinary 1`] = `
<div
  style="margin-left: 200px; margin-top: 200px; width: max-content; position: relative"
>
  
        
  <svc-button
    params="title: title, action: action"
  >
    <button
      class="svc-button"
      data-bind="click: action, css: css, disable: disabled"
    >
      
  
      <span
        class="svc-button__text"
        data-bind="text: title"
      >
        Show menu
      </span>
      

    </button>
    

  </svc-button>
  
        
  <sv-popup
    params="model: { contentComponentName: name, contentComponentData: model,
          isVisible: isVisible, verticalPosition: verticalPosition, horizontalPosition: horizontalPosition }"
  >
    
        
  </sv-popup>
  
      
</div>
`;

exports[`Storyshots Popup Modal Context Menu With Pointer 1`] = `
<div
  style="margin-left: 200px; margin-top: 200px; width: max-content; position: relative"
>
  
        
  <svc-button
    params="title: title, action: action"
  >
    <button
      class="svc-button"
      data-bind="click: action, css: css, disable: disabled"
    >
      
  
      <span
        class="svc-button__text"
        data-bind="text: title"
      >
        Show menu
      </span>
      

    </button>
    

  </svc-button>
  
        
  <sv-popup
    params="contentComponentName: name, contentComponentData: model,
          isVisible: isVisible, verticalPosition: verticalPosition,
          horizontalPosition: horizontalPosition, showPointer: showPointer"
  >
    
        
  </sv-popup>
  
      
</div>
`;

exports[`Storyshots Popup Modal Fast Entry 1`] = `

      
`;

exports[`Storyshots Tabbed Menu Tabbed Menu 1`] = `
<div>
  <!-- ko component: { name: 'svc-tabbed-menu', params: { items: items } } -->
  <div
    class="svc-tabbed-menu"
  >
    
  
    <!-- ko foreach: items -->
    
  
    <span
      class="svc-tabbed-menu-item-container"
      data-bind="css: $data.css, style: { visibility : $data.isVisible? 'visible': 'hidden' }, visible: $data.visible === undefined || $data.visible"
    >
      
    
      <!-- ko component: { name: $data.component || 'svc-tabbed-menu-item', params: { item: $data } } -->
      
    
      <!-- /ko -->
      
  
    </span>
    
  
    <!-- /ko -->
    

  </div>
  

  <!-- /ko -->
</div>
`;

exports[`Storyshots Tabbed Menu Tabbed Menu Item 1`] = `
<svc-tabbed-menu-item
  params="item: item"
>
  <div
    class="svc-tabbed-menu-item"
    data-bind="click: action, css: { 'svc-tabbed-menu-item--selected': active, 'svc-tabbed-menu-item--disabled': disabled }"
  >
    
  
    <span
      class="svc-text svc-text--normal svc-tabbed-menu-item__text"
      data-bind="text: title, css: { 'svc-text--bold': active }"
    >
      Menu Item
    </span>
    

  </div>
  

</svc-tabbed-menu-item>
`;

exports[`Storyshots Tabbed Menu Tabbed Menu Item Disabled 1`] = `
<svc-tabbed-menu-item
  params="item: item"
>
  <div
    class="svc-tabbed-menu-item svc-tabbed-menu-item--disabled"
    data-bind="click: action, css: { 'svc-tabbed-menu-item--selected': active, 'svc-tabbed-menu-item--disabled': disabled }"
  >
    
  
    <span
      class="svc-text svc-text--normal svc-tabbed-menu-item__text"
      data-bind="text: title, css: { 'svc-text--bold': active }"
    >
      Disabled Menu Item
    </span>
    

  </div>
  

</svc-tabbed-menu-item>
`;

exports[`Storyshots Tabbed Menu Tabbed Menu Item Selected 1`] = `
<svc-tabbed-menu-item
  params="item: item"
>
  <div
    class="svc-tabbed-menu-item svc-tabbed-menu-item--selected"
    data-bind="click: action, css: { 'svc-tabbed-menu-item--selected': active, 'svc-tabbed-menu-item--disabled': disabled }"
  >
    
  
    <span
      class="svc-text svc-text--normal svc-tabbed-menu-item__text svc-text--bold"
      data-bind="text: title, css: { 'svc-text--bold': active }"
    >
      Menu Item
    </span>
    

  </div>
  

</svc-tabbed-menu-item>
`;

exports[`Storyshots Toolbox Toolbox 1`] = `
<svc-toolbox
  params="categories: toolboxCategories"
>
  <div
    class="svc-toolbox"
  >
    
  
    <div
      class="svc-toolbox__category"
    >
      
    
      <!-- ko foreach: items -->
      
    
      <div
        class="svc-toolbox__tool"
        data-bind="css: $data.css, visible: $data.visible === undefined || $data.visible, style: { visibility : $data.isVisible ? 'visible': 'hidden' }"
      >
        
      
        <!-- ko if: $data.needSeparator -->
        
      
        <div
          class="svc-toolbox__category-separator"
        />
        
      
        <!-- /ko -->
        
      
        <!-- ko component: { name: $data.component || 'svc-toolbox-item', params: { item: $data, creator: $parents[1].creator } } -->
        
      
        <!-- /ko -->
        
    
      </div>
      
    
      <!-- /ko -->
      
  
    </div>
    

  </div>
  

</svc-toolbox>
`;
